<resources>
    <string name="app_name">Shopping List</string>
    <string name="tMainTitle">Shopping List</string>
    <string name="itemCreate">Create</string>
    <string name="reuse_opt">Reuse List</string>
    <string name="new_opt">Create List</string>
    <string name="add_list">Add List</string>
    <string name="description">Will enable creation of a list</string>
    <string name="labelNewList">New List</string>
    <string name="product_name">Product Name</string>
    <string name="product_notes">Notes</string>
    <string name="product_brand">Brand</string>
    <string name="product_quantity">Quantity</string>
    <string name="list_name">List Name</string>
    <string name="hint_list_name">Insert a name</string>
    <string name="tProducts">Products</string>

    <string name="titleRemoveIcon">removeProd</string>
    <string name="tileEditIcon">editProd</string>

    <string name="titleAddProdList">Add product to</string>
    <string name="titleEditProdList">Edit product of list </string>
    <string name="product_category">Category</string>
    <string name="product_price">Unit Price</string>
    <string name="new_product">New Product</string>
    <string name="create_list">Create List</string>
    <string name="cancel_list">Cancel</string>
    <string name="description_dlg">Write the name of your list</string>
    <string name="fruit_vegetables">Fruit/Vegetables</string>
    <string name="starchy_food">Starchy Food</string>
    <string name="dairy">Dairy</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="units">Units</string>
    <string name="kg">Kg</string>
    <string name="grams">Gram</string>
    <string name="liter">Liter</string>
    <string name="boxes">Box</string>
    <string name="layout_main_name">Name</string>
    <string name="layout_main_number">Number</string>
    <string name="titleEditProd">Edit product</string>
    <string name="no_product_name">No product name specified</string>
    <string name="no_product_price">No product price specified</string>
    <string name="no_product_quantity">No product quantity specified</string>
    <string name="optional_field">Optional</string>
    <string name="product_photo">Photo</string>
    <string name="from_gallery_btn">From Gallery</string>
    <string name="from_camera_btn">From Camera</string>
    <string name="delete_dlg">Delete</string>
    <string name="remove_item_description_dlg">Remove </string>
    <string name="tByName">Order by name</string>
    <string name="tProdsBought">Order by products bought</string>
    <string name="tOrderByCat">Order by category</string>
    <string name="tSearchProd">Search product</string>
    <string name="no_products">No Products</string>
    <string name="no_lists">No Lists</string>
    <string name="help">Help</string>
    <string name="dialog_back">Back</string>
    <string name="items">Items</string>
    <string name="plus">Plus</string>
    <string name="hold">Hold</string>
    <string name="press">Press</string>
    <string name="add_new_list">Add a new list</string>
    <string name="opt_remove_list">Option to remove list</string>
    <string name="edit_existing_list">To edit existing list</string>
    <string name="add_new_prod">Add a new product</string>
    <string name="remove_prod">Option to remove product</string>
    <string name="edit_prod">To edit existing product</string>
    <string name="order_prod_list">Order list options</string>
    <string name="check_bought">Mark as bought</string>
    <string name="checkbox">Checkbox</string>
    <string name="three_dots">3 Dots</string>
    <string name="default_list_name">List</string>
    <string name="currency">$</string>
    <string name="new_category">New Category</string>
    <string name="new_unit">New Unit</string>
    <string name="insert_unit_name">Insert unit name</string>
    <string name="insert_category_name">Insert category name</string>
    <string name="add">Add</string>
    <string name="previously_created">Previously Created</string>
    <string name="settings">Definitions</string>
    <string name="optManageUnits">Manage defined units</string>
    <string name="optManageCategories">Manage defined categories</string>
    <string name="must_create_unit">You must create a Unit</string>
    <string name="must_create_category">You must create a Category</string>
    <string name="configurations">Configurations</string>
    <string name="search_product">Search a product</string>
    <string name="error_loading">Error loading application</string>
    <string name="bin">Bin</string>
    <string name="create_from_old">Create list from old lists</string>
    <string name="config">Config</string>
    <string name="configure_units_cats">Configure units and categories</string>
    <string name="search_for_objects">Search for existing objects</string>
    <string name="magnifier">Magnifier</string>
    <string name="saved">Saved</string>
</resources>