<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item android:id="@+id/searchProd"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/tSearchProd"
            app:showAsAction="ifRoom"/>

        <item android:id="@+id/addProd"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/titleAddProdList"
            app:showAsAction="always"/>
        <item android:id="@+id/orderName"
            android:title="@string/tByName"/>
        <item android:id="@+id/orderProdsBought"
            android:title="@string/tProdsBought"/>
        <item android:id="@+id/orderByCat"
            android:title="@string/tOrderByCat"/>
        <item android:id="@+id/helpProd"
            android:icon="@drawable/ic_help"
            android:title="@string/help"/>
</menu>

