<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:scaleType="center"
        android:background="@color/primaryColor"
        android:contentDescription="@string/app_name" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/description_dlg"
        android:textAlignment="center"
        android:textSize="20dp"
        android:padding="15dp"/>
    <EditText
        android:padding="15dp"
        android:id="@+id/listNameDlg"
        android:inputType="textCapSentences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/list_name"/>
</LinearLayout>