<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageProductActivity"
    android:padding="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:inputType="text"
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:textSize="17sp"
            android:maxLines="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_brand"
            android:textSize="15sp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"/>
        <EditText
            android:inputType="text"
            android:id="@+id/edBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"

            android:maxLines="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity"
            android:textSize="15sp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"/>

    </LinearLayout>
</LinearLayout>